Update title and meta tags to Racing Operations System

--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -5,7 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <title>Ok, Box Box | Autonomous Race Control</title>
+  <title>Ok, Box Box | Racing Operations System</title>
+  <meta name="description" content="Ok, Box Box - Racing Operations System" />
+  <meta property="og:title" content="Ok, Box Box | Racing Operations System" />
+  <meta property="og:description" content="Racing Operations System" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://okboxbox.com" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Ok, Box Box | Racing Operations System" />
 </head>
 
 <body>
